@@ -4,6 +4,7 @@ import java.awt.event.KeyEvent;
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.LinkedList;
 import java.util.Stack;
 
 import enums.AxesDisplay;
@@ -197,9 +198,16 @@ public class RobotRun extends PApplet {
 
 	public int editIdx = -1;
 
-	// container for instructions being coppied/ cut and pasted
+	// container for instructions being copied/ cut and pasted
 	ArrayList<Instruction> clipBoard = new ArrayList<>();
-
+	
+	/**
+	 * A list of instruction indexes for the active program, which point to
+	 * motion instructions, whose position and orientation (or joint angles)
+	 * are close enough to the robot's current position.
+	 */
+	private HashMap<Integer, Boolean> mInstRobotAt;
+	
 	private int active_index = 0;
 
 	/**
@@ -215,19 +223,19 @@ public class RobotRun extends PApplet {
 	 * Defines a set of tool tip positions that are drawn to form a trace of
 	 * the robot's motion overtime.
 	 */
-	private ArrayList<PVector> tracePts;
+	private LinkedList<PVector> tracePts;
 	
+	/**
+	 * Keeps track of the world object that the mouse was over, when the mouse
+	 * was first pressed down.
+	 */
 	private WorldObject mouseOverWO;
 	
 	/**
-	 * Debug flag for testing circular motion instrucitons.
+	 * Keeps track of the mouse drag event is updating the orientation of a
+	 * world object.
 	 */
-	public boolean renderCircPts;
-	
-	/**
-	 * Debug positions for testing circular motion instructions.
-	 */
-	public PVector start, inter, end;
+	private boolean mouseDragWO;
 	
 	/**
 	 * Applies the active camera to the matrix stack.
@@ -288,7 +296,7 @@ public class RobotRun extends PApplet {
 	 * @return Whether or not bounding boxes are displayed
 	 */
 	public boolean areOBBsRendered() {
-		return !UI.getButtonState("ToggleOBB");
+		return !UI.getButtonState("ToggleOBBs");
 	}
 
 	/**
@@ -1016,30 +1024,6 @@ public class RobotRun extends PApplet {
 		
 		DataManagement.saveRobotData(activeRobot, 2);
 	}
-
-	/**
-	 * Create button in the Create window
-	 * 
-	 * Pulls the user's input from the input fields (name, shape type,
-	 * dimensions, colors, etc.) in the Create window and attempts to create a
-	 * new world object from the user's input. If creation of a world object
-	 * was successful, then the new object is added to the active scenario and
-	 * all data is saved.
-	 */
-	public void CreateWldObj() {
-		if (activeScenario != null) {
-			WorldObject newObject = UI.createWorldObject();
-
-			if (newObject != null) {
-				newObject.setLocalCenter(new PVector(-500f, 0f, 0f));
-				activeScenario.addWorldObject(newObject);
-				DataManagement.saveScenarios(this);
-			}
-		}
-		else {
-			System.err.println("No active scenario!");
-		}
-	}
 	
 	/**
 	 * Pendant - button
@@ -1059,22 +1043,6 @@ public class RobotRun extends PApplet {
 	 */
 	public void data() {
 		nextScreen(ScreenMode.NAV_DATA);
-	}
-
-	/**
-	 * Delete button in the edit window
-	 * 
-	 * Removes the selected world object from the active scenario.
-	 */
-	public void DeleteWldObj() {
-		// Delete focused world object and add to the scenario undo stack
-		WorldObject selected = UI.getSelectedWO();
-		
-		updateScenarioUndo( selected );
-		int ret = getActiveScenario().removeWorldObject( selected );
-		Fields.debug("World Object removed: %d\n", ret);
-		
-		DataManagement.saveScenarios(this);
 	}
 	
 	@Override
@@ -1183,14 +1151,13 @@ public class RobotRun extends PApplet {
 	 */
 	private void drawTrace(PGraphics g) {		
 		if (tracePts.size() > 1) {
-			PVector lastPt = tracePts.get(0);
+			PVector lastPt = tracePts.getFirst();
 			
 			g.pushStyle();
 			g.stroke(0);
 			g.strokeWeight(3);
 			
-			for(int i = 1; i < tracePts.size(); i += 1) {
-				PVector curPt = tracePts.get(i);
+			for(PVector curPt : tracePts) {
 				
 				g.line(lastPt.x, lastPt.y, lastPt.z, curPt.x, curPt.y, curPt.z);
 				
@@ -1401,7 +1368,7 @@ public class RobotRun extends PApplet {
 		case SET_DEF_TOOLTIP:
 			activeRobot.setDefToolTip(curFrameIdx, options.getLineIdx());
 			activeRobot.setActiveToolFrame(curFrameIdx);
-			DataManagement.saveRobotData(activeRobot, 1);
+			DataManagement.saveRobotData(activeRobot, 2);
 			lastScreen();
 			break;
 		case TEACH_3PT_TOOL:
@@ -1776,19 +1743,25 @@ public class RobotRun extends PApplet {
 		case SET_MINST_SPD:
 			m = (MotionInstruction) r.getInstToEdit(getActiveProg(), getActiveInstIdx());
 			int motionType = m.getMotionType();
-			float tempSpeed = Float.parseFloat(workingText.toString());
 			
-			if (motionType == Fields.MTYPE_LINEAR ||
-					motionType == Fields.MTYPE_CIRCULAR) {
+			try {
+				float tempSpeed = Float.parseFloat(workingText.toString());
 				
-				tempSpeed /= RoboticArm.motorSpeed;
+				if (motionType == Fields.MTYPE_LINEAR ||
+						motionType == Fields.MTYPE_CIRCULAR) {
+					
+					tempSpeed /= RoboticArm.motorSpeed;
+					
+				} else {
+					tempSpeed /= 100f;
+				}
 				
-			} else {
-				tempSpeed /= 100f;
+				m.setSpdMod(RMath.clamp(tempSpeed, 0.01f, 1f));
+				
+			} catch (NumberFormatException NFEx) {
+				// Invalid input
 			}
 			
-			m.setSpdMod(RMath.clamp(tempSpeed, 0.01f, 1f));
-
 			lastScreen();
 			break;
 		case SET_MINST_IDX:
@@ -1895,8 +1868,6 @@ public class RobotRun extends PApplet {
 			try {
 				pMInst = (PosMotionInst) r.getInstToEdit(getActiveProg(), getActiveInstIdx());
 				int tempRegister = Integer.parseInt(workingText.toString()) - 1;
-
-				global.Fields.debug("Offset: %d\n", tempRegister);
 				
 				if (tempRegister < 0 || tempRegister > 99) {
 					// Invalid register index
@@ -4176,9 +4147,15 @@ public class RobotRun extends PApplet {
 	 * Stops all robot motion and program execution.
 	 */
 	public void hold() {
+		boolean robotInMotion = activeRobot.inMotion();
 		// Stop all robot motion and program execution
 		activeRobot.halt();
 		progExecState.halt();
+		
+		if (robotInMotion && !activeRobot.inMotion()) {
+			// Robot has stopped moving
+			updateInstList();
+		}
 	}
 
 	/**
@@ -4573,6 +4550,7 @@ public class RobotRun extends PApplet {
 			switch (mode) {
 			case NAV_PROG_INSTR:
 				DisplayLine active = contents.getActiveLine();
+				updateInstList();
 				// Update the active robot's active instruction index
 				if (active != null && active.getItemIdx() < getActiveProg().size()) {
 					setActiveInstIdx(active.getItemIdx());
@@ -4780,7 +4758,6 @@ public class RobotRun extends PApplet {
 		int tokenOffset = Fields.TXT_PAD - Fields.PAD_OFFSET;
 		
 		int size = p.getNumOfInst();
-		Point tipPos = activeRobot.getToolTipNative();
 		
 		for (int i = 0; i < size; i += 1) {
 			DisplayLine line = new DisplayLine(i);
@@ -4800,34 +4777,21 @@ public class RobotRun extends PApplet {
 
 			int numWdth = line.get(line.size() - 1).length();
 			xPos += numWdth * Fields.CHAR_WDTH + tokenOffset;
-
+			
 			if (instr instanceof MotionInstruction) {
-				// Show '@' at the an instrution, if the Robot's position is
-				// close to that position stored in the instruction's register
-				Point pt;
+				Boolean isRobotAt = mInstRobotAt.get(new Integer(i));
 				
-				if (instr instanceof PosMotionInst) {
-					pt = activeRobot.getVector((PosMotionInst)instr, p, false);
-					
-				} else if (instr instanceof CamMoveToObject) {
-					pt = ((CamMoveToObject) instr).getWOPosition();
-					
-				} else {
-					pt = null;
-				}
-
-				if (pt != null && tipPos.position.dist(pt.position)
-						< (activeRobot.getLiveSpeed() / 100f)) {
-					
+				if (isRobotAt != null && isRobotAt) {
 					line.add("@");
 					
 				} else {
+					// Add a placeholder for the '@' symbol
 					line.add("\0");
 				}
-
+				
 				xPos += Fields.CHAR_WDTH + tokenOffset;
 			}
-
+			
 			String[] fields = instr.toStringArray();
 
 			for (int j = 0; j < fields.length; j += 1) {
@@ -5149,6 +5113,8 @@ public class RobotRun extends PApplet {
 			case NAV_PROG_INSTR:
 				progCallStack.clear();
 				setActiveInstIdx(0);
+				// Reinitialize the map of motion instructions
+				updateInstList();
 				
 				break;
 			case PROG_CREATE:
@@ -5527,6 +5493,13 @@ public class RobotRun extends PApplet {
 			
 			popMatrix();
 			
+			if (!mouseDragWO && (mouseButton == CENTER || mouseButton == RIGHT)) {
+				// Save the selected world object's current state
+				SCENARIO_UNDO.push(selectedWO.clone());
+			}
+			
+			mouseDragWO = true;
+			
 			if (mouseButton == CENTER) {
 				// Drag the center mouse button to move the object
 				PVector translation = new PVector(
@@ -5646,6 +5619,7 @@ public class RobotRun extends PApplet {
 	@Override
 	public void mouseReleased() {
 		mouseOverWO = null;
+		mouseDragWO = false;
 	}
 
 	@Override
@@ -6465,6 +6439,7 @@ public class RobotRun extends PApplet {
 		super.setup();
 		
 		mouseOverWO = null;
+		mouseDragWO = false;
 		
 		PImage[][] buttonImages = new PImage[][] {
 			
@@ -6520,16 +6495,12 @@ public class RobotRun extends PApplet {
 			progExecState = new ProgExecution();
 			progCallStack = new Stack<>();
 			
-			tracePts = new ArrayList<PVector>();
+			tracePts = new LinkedList<PVector>();
 			
 			setManager(new WGUI(this, buttonImages));
 			
-			renderCircPts = false;
+			mInstRobotAt = new HashMap<Integer, Boolean>();
 			
-			start = null;
-			inter = null;
-			end = null;
-
 		} catch (NullPointerException NPEx) {
 			DataManagement.errLog(NPEx);
 			throw NPEx;
@@ -6697,9 +6668,9 @@ public class RobotRun extends PApplet {
 	 * Toggles the second Robot on or off.
 	 */
 	public void ToggleRobot() {
-		boolean robotRemoved = UI.toggleSecondRobot();
+		UI.toggleSecondRobot();
 		// Reset the active robot to the first if the second robot is removed
-		if (robotRemoved && activeRobot != ROBOTS.get(0)) {
+		if (activeRobot != ROBOTS.get(0)) {
 			activeRobot = ROBOTS.get(0);
 		}
 
@@ -6778,12 +6749,16 @@ public class RobotRun extends PApplet {
 	public void undoScenarioEdit() {
 		if (!SCENARIO_UNDO.empty()) {
 			activeScenario.put( SCENARIO_UNDO.pop() );
+			UI.updateListContents();
+			WorldObject wo = UI.getSelectedWO();
+			
+			if (wo != null) {
+				UI.updateEditWindowFields(wo);
+			}
+			
 			/* Since objects are copied onto the undo stack, the robot may be
 			 * reference the wrong copy of an undone object. */
 			activeRobot.releaseHeldObject();
-			
-			UI.updateListContents();
-			UI.updateEditWindowFields( UI.getSelectedWO() );
 		}
 	}
 	
@@ -7486,8 +7461,15 @@ public class RobotRun extends PApplet {
 	}
 	
 	public void updateRobotJogMotion(int set, int direction) {
-		if (isShift()) {
+		if (isShift() && !isProgExec()) {
+			boolean robotInMotion = activeRobot.inMotion();
+			
 			activeRobot.updateJogMotion(set, direction);
+			
+			if (robotInMotion && !activeRobot.inMotion()) {
+				// Robot has stopped moving
+				updateInstList();
+			}
 		}
 	}
 
@@ -7498,8 +7480,7 @@ public class RobotRun extends PApplet {
 	 *            The world object to save
 	 */
 	public void updateScenarioUndo(WorldObject saveState) {
-
-		// Only the latest 10 world object save states can be undone
+		// Only the latest 40 world object save states can be undone
 		if (SCENARIO_UNDO.size() >= 40) {
 			// Not sure if size - 1 should be used instead
 			SCENARIO_UNDO.remove(0);
@@ -7524,6 +7505,52 @@ public class RobotRun extends PApplet {
 				// If the part was modified, then save its previous state
 				updateScenarioUndo(saveState);
 			}
+		}
+	}
+	
+	/**
+	 * Create button in the Create window
+	 * 
+	 * Pulls the user's input from the input fields (name, shape type,
+	 * dimensions, colors, etc.) in the Create window and attempts to create a
+	 * new world object from the user's input. If creation of a world object
+	 * was successful, then the new object is added to the active scenario and
+	 * all data is saved.
+	 */
+	public void WOCreateBtn() {
+		if (activeScenario != null) {
+			WorldObject newObject = UI.createWorldObject();
+
+			if (newObject != null) {
+				newObject.setLocalCenter(new PVector(-500f, 0f, 0f));
+				activeScenario.addWorldObject(newObject);
+				DataManagement.saveScenarios(this);
+			}
+		}
+		else {
+			System.err.println("No active scenario!");
+		}
+	}
+	
+	/**
+	 * Delete button in the edit window
+	 * 
+	 * Removes the selected world object from the active scenario.
+	 */
+	public void WODelBtn() {
+		// Delete focused world object and add to the scenario undo stack
+		WorldObject selected = UI.getSelectedWO();
+		if (selected != null) {
+			updateScenarioUndo( selected );
+			int ret = getActiveScenario().removeWorldObject( selected );
+			
+			if (ret == 0) {
+				UI.setSelectedWO(null);
+			}
+			
+			Fields.debug("World Object removed: %d\n", ret);
+			
+			DataManagement.saveScenarios(this);
 		}
 	}
 
@@ -7644,7 +7671,7 @@ public class RobotRun extends PApplet {
 	private void progExec(boolean singleExec) {
 		ExecType pExec = (singleExec) ? ExecType.EXEC_SINGLE
 				: ExecType.EXEC_FULL;
-		progExecState.setExec(pExec);
+		progExecState.setType(pExec);
 	}
 	
 	/**
@@ -7768,7 +7795,14 @@ public class RobotRun extends PApplet {
 			updateProgExec();
 		}
 		
+		boolean robotInMotion = activeRobot.inMotion();
+		
 		activeRobot.updateRobot();
+		
+		if (robotInMotion && !activeRobot.inMotion()) {
+			// Robot has stopped moving
+			updateInstList();
+		}
 		
 		if (isProgExec()) {
 			updateCurIdx();
@@ -7931,13 +7965,18 @@ public class RobotRun extends PApplet {
 				tracePts.add(tipPosNative.position);
 				
 			} else {
-				PVector lastTracePt = tracePts.get(tracePts.size() - 1);
+				PVector lastTracePt = tracePts.getLast();
 				
 				if (PVector.sub(tipPosNative.position, lastTracePt).mag()
 						> 0.5f) {
 					
-					tracePts.add(tipPosNative.position);
+					tracePts.addLast(tipPosNative.position);
 				}
+			}
+			
+			if (tracePts.size() > 10000f) {
+				// Begin to remove points after the limit is reached
+				tracePts.removeFirst();
 			}
 		}
 		
@@ -7965,46 +8004,6 @@ public class RobotRun extends PApplet {
 			Fields.drawAxes(getGraphics(), origin, RMath.rMatToWorld(orientation),
 					500f, Fields.BLACK);
 		}
-		
-		// Circular motion debug
-		if (renderCircPts) {
-			pushStyle();
-			
-			if (start != null) {
-				noFill();
-				stroke(Fields.BLACK);
-				
-				pushMatrix();
-				translate(start.x, start.y, start.z);
-				sphere(15);
-				popMatrix();
-			}
-			
-			if (inter != null) {
-				noFill();
-				stroke(Fields.RED);
-				
-				pushMatrix();
-				translate(inter.x, inter.y, inter.z);
-				sphere(15);
-				popMatrix();
-			}
-			
-			if (end != null) {
-				noFill();
-				stroke(Fields.ORANGE);
-				
-				pushMatrix();
-				translate(end.x, end.y, end.z);
-				sphere(15);
-				popMatrix();
-			}
-			
-			popStyle();
-		}
-		
-		
-		
 	}
 	
 	/**
@@ -8112,7 +8111,8 @@ public class RobotRun extends PApplet {
 		lastTextPositionY += 20;
 
 		if (activeScenario != null) {
-			text(activeScenario.getName(), lastTextPositionX, lastTextPositionY);
+			String out = String.format("Active scenario: %s", activeScenario.getName());
+			text(out, lastTextPositionX, lastTextPositionY);
 			
 		} else {
 			text("No active scenario", lastTextPositionX, lastTextPositionY);
@@ -8389,10 +8389,70 @@ public class RobotRun extends PApplet {
 		updatePendantScreen();
 	}
 	
+	/**
+	 * Updates program instruction list display based on the active robot's
+	 * current position and orientation. If the position defined by a motion
+	 * instruction in the active program display is equal to the robot's
+	 * position and orientation, then an '@' is displayed next to the motion
+	 * instruction.
+	 */
+	private void updateInstList() {
+		if (mode == ScreenMode.NAV_PROG_INSTR) {
+			Program prog = getActiveProg();
+			Point robotPos = activeRobot.getToolTipNative();
+			boolean updatedLines = false;
+			
+			// Check each instruction in the active program
+			for (int idx = 0; idx < prog.getNumOfInst(); ++idx) {
+				Instruction inst = prog.getInstAt(idx);
+				Integer keyInt = new Integer(idx);
+				
+				if (inst instanceof PosMotionInst) { 
+					PosMotionInst mInst = (PosMotionInst)prog.getInstAt(idx);
+					Point instPt = activeRobot.getVector(mInst, prog, false);
+					
+					if (instPt != null) {
+						boolean closeEnough = (mInst.getMotionType() == Fields.MTYPE_JOINT
+								&& instPt.compareJoint(robotPos) ||
+								mInst.getMotionType() != Fields.MTYPE_JOINT
+								&& instPt.compareCartesian(robotPos));
+						
+						Boolean prevState = mInstRobotAt.put(keyInt, closeEnough);
+						
+						if (prevState == null || prevState.booleanValue() != closeEnough) {
+							updatedLines = true;
+						}
+					}
+						
+				} else if (mInstRobotAt.get(keyInt) != null) {
+					// Remove previous motion instructions
+					mInstRobotAt.remove(keyInt);
+				}
+			}
+			
+			if (updatedLines) {
+				updatePendantScreen();
+			}
+		}
+		
+	}
+	
 	private int updateProgExec() {
 		Program prog = getActiveProg();
 		Instruction activeInstr = prog.getInstAt(progExecState.getCurIdx());
-		int nextIdx = progExecState.getCurIdx() + 1;
+		int nextIdx;
+		
+		if (progExecState.getType() == ExecType.EXEC_BWD) {
+			// Backward program execution only works for motion instructions
+			nextIdx = progExecState.getCurIdx() - 1;
+			
+			if (!(prog.getInstAt(nextIdx) instanceof MotionInstruction)) {
+				nextIdx = progExecState.getCurIdx();
+			}
+			
+		} else {
+			nextIdx = progExecState.getCurIdx() + 1;
+		}
 		
 		if (progExecState.getState() == ExecState.EXEC_INST ||
 				progExecState.getState() == ExecState.EXEC_START) {
